--- a/Moredetails.html
+++ b/Moredetails.html
@@ -1,322 +1,246 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-<meta charset="UTF-8">
-<title>ORBITRON v9.0 - VOID FOCUS</title>
-<link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Share+Tech+Mono&display=swap" rel="stylesheet">
-<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+    <meta charset="UTF-8">
+    <title>ORBITRON v9.1</title>
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Share+Tech+Mono&display=swap" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+    <style>
+        :root {
+            --n: #00f2ff; --p: #ff00ff; --bg: #01050a;
+            --glass: rgba(0, 242, 255, 0.06);
+            --border: rgba(0, 242, 255, 0.2);
+        }
 
-<style>
-:root {
-    --n:#00f2ff;
-    --p:#ff00ff;
-    --bg:#01050a;
-    --glass:rgba(0,242,255,0.05);
-    --border:rgba(0,242,255,0.2);
-}
+        * { box-sizing: border-box; margin: 0; padding: 0; }
+        body { background: var(--bg); color: var(--n); font-family: 'Share Tech Mono', monospace; height: 100vh; overflow: hidden; }
 
-*{box-sizing:border-box;margin:0;padding:0;}
+        #starfield { position: fixed; top: 0; left: 0; width: 100%; height: 100%; z-index: 1; }
 
-body{
-    background:var(--bg);
-    color:var(--n);
-    font-family:'Share Tech Mono', monospace;
-    height:100vh;
-    overflow:hidden;
-}
+        /* --- LAYOUT --- */
+        .os-container {
+            position: relative; z-index: 10;
+            display: flex; flex-direction: column;
+            height: 100vh; padding: 20px;
+        }
 
-#starfield{
-    position:fixed;
-    inset:0;
-    z-index:1;
-}
+        header {
+            display: flex; justify-content: space-between; align-items: center;
+            padding-bottom: 15px; border-bottom: 1px solid var(--border);
+            margin-bottom: 20px; font-family: 'Orbitron';
+        }
 
-/* Центрируем всё */
-.viewport{
-    position:relative;
-    z-index:10;
-    display:flex;
-    flex-direction:column;
-    align-items:center;
-    height:100vh;
-    padding:20px;
-}
+        .main-area {
+            display: flex; flex: 1; gap: 40px; overflow: hidden;
+        }
 
-.header{
-    width:100%;
-    max-width:700px;
-    display:flex;
-    justify-content:space-between;
-    padding:15px;
-    border-bottom:1px solid var(--border);
-    font-family:'Orbitron';
-}
+        .panel {
+            background: var(--glass); backdrop-filter: blur(10px);
+            border: 1px solid var(--border); display: flex; flex-direction: column;
+            box-shadow: 0 0 40px rgba(0,0,0,0.8);
+        }
 
-/* ЧАТ */
-.chat-panel{
-    width:100%;
-    max-width:650px;
-    height:75vh;
-    background:var(--glass);
-    backdrop-filter:blur(12px);
-    border:1px solid var(--border);
-    display:flex;
-    flex-direction:column;
-    box-shadow:0 0 40px rgba(0,0,0,0.6);
-}
+        /* --- TODO (LEFT) --- */
+        .todo-panel { width: 300px; flex-shrink: 0; }
+        #todo-list { flex: 1; overflow-y: auto; padding: 10px; }
+        .task { 
+            padding: 12px; border-bottom: 1px solid rgba(0,242,255,0.1); 
+            cursor: pointer; transition: 0.2s; font-size: 13px;
+        }
+        .task:hover { 
+            color: var(--p); background: rgba(255,0,255,0.1);
+            text-decoration: line-through; border-bottom: 1px solid var(--p);
+            box-shadow: inset 0 0 10px rgba(255,0,255,0.2);
+        }
 
-#chat-stream{
-    flex:1;
-    overflow-y:auto;
-    padding:20px;
-    display:flex;
-    flex-direction:column;
-    gap:12px;
-}
+        /* --- CHAT (CENTERED) --- */
+        .chat-wrapper {
+            flex: 1; display: flex; justify-content: center; /* ЦЕНТРИРОВАНИЕ */
+        }
+        .chat-panel {
+            width: 100%; max-width: 550px; /* УЗКИЙ ЧАТ */
+            height: 100%;
+        }
+        #chat-stream {
+            flex: 1; overflow-y: auto; padding: 20px;
+            display: flex; flex-direction: column; gap: 15px;
+            scrollbar-width: none;
+        }
+        .msg-text { background: rgba(0,242,255,0.05); padding: 10px 15px; border-radius: 4px; border: 1px solid rgba(0,242,255,0.1); }
+        .msg-nick { font-size: 10px; color: var(--p); margin-bottom: 4px; font-family: 'Orbitron'; }
 
-.msg-nick{
-    font-size:10px;
-    color:var(--p);
-    font-family:'Orbitron';
-}
+        /* --- UI ELEMENTS --- */
+        .input-box { display: flex; gap: 10px; padding: 15px; background: rgba(0,0,0,0.4); border-top: 1px solid var(--border); }
+        input { background: rgba(0,0,0,0.6); border: 1px solid var(--border); color: #fff; padding: 12px; font-family: inherit; flex: 1; outline: none; }
+        button { background: transparent; border: 1px solid var(--n); color: var(--n); padding: 10px 20px; cursor: pointer; font-family: 'Orbitron'; font-size: 11px; }
+        button:hover { background: var(--n); color: #000; box-shadow: 0 0 20px var(--n); }
 
-.msg-text{
-    background:rgba(0,242,255,0.07);
-    padding:10px 15px;
-    border-radius:0 10px 10px 10px;
-    border:1px solid rgba(0,242,255,0.15);
-    color:#e0faff;
-}
-
-.input-bar{
-    display:flex;
-    gap:10px;
-    padding:15px;
-    border-top:1px solid var(--border);
-}
-
-input{
-    flex:1;
-    background:rgba(0,0,0,0.6);
-    border:1px solid var(--border);
-    color:#fff;
-    padding:12px;
-    outline:none;
-}
-
-button{
-    background:transparent;
-    border:1px solid var(--n);
-    color:var(--n);
-    padding:10px 20px;
-    font-family:'Orbitron';
-    cursor:pointer;
-}
-
-button:hover{
-    background:var(--n);
-    color:#000;
-}
-
-#auth-gate{
-    position:fixed;
-    inset:0;
-    z-index:100;
-    background:var(--bg);
-    display:flex;
-    align-items:center;
-    justify-content:center;
-}
-.hidden{display:none!important;}
-</style>
+        /* --- AUTH --- */
+        #auth-gate { position: fixed; inset: 0; z-index: 100; background: var(--bg); display: flex; align-items: center; justify-content: center; }
+        .auth-form { width: 380px; padding: 50px; border: 1px solid var(--n); text-align: center; background: rgba(0,242,255,0.02); }
+        .hidden { display: none !important; }
+    </style>
 </head>
-
 <body>
 
 <canvas id="starfield"></canvas>
 
 <div id="auth-gate">
-<div style="width:350px;text-align:center;border:1px solid var(--n);padding:50px;backdrop-filter:blur(10px);">
-<h1 style="font-family:'Orbitron';margin-bottom:30px;">OMNI_v9.0</h1>
-<input type="email" id="email" placeholder="PILOT_ID" style="width:100%;margin-bottom:10px;">
-<input type="password" id="pass" placeholder="PASSWORD" style="width:100%;margin-bottom:25px;">
-<button onclick="Core.Auth('in')" style="width:100%;">INITIALIZE</button>
-</div>
+    <div class="auth-form">
+        <h1 style="font-family:'Orbitron'; margin-bottom:30px; letter-spacing:4px;">TERMINAL_ACCESS</h1>
+        <input type="email" id="email" placeholder="PILOT_EMAIL" style="width:100%; margin-bottom:12px;">
+        <input type="password" id="pass" placeholder="SECURITY_KEY" style="width:100%; margin-bottom:20px;">
+        <button onclick="Core.Auth('in')" style="width:100%; margin-bottom:15px;">LOGIN</button>
+        <button onclick="Core.Auth('up')" style="border:none; color:var(--p); font-size:9px;">> NEW PILOT REGISTRATION</button>
+    </div>
 </div>
 
-<div class="viewport">
-<header class="header">
-<div>ORBITRON_SYSTEM // FOCUS</div>
-<div id="clock">00:00:00</div>
-</header>
+<div class="os-container">
+    <header>
+        <div>ORBITRON_OS // v9.1</div>
+        <div id="clock">00:00:00</div>
+    </header>
 
-<main class="chat-panel">
-<div id="chat-stream"></div>
-<div class="input-bar">
-<input type="text" id="chat-in" placeholder="ENTER TELEMETRY DATA...">
-<button onclick="Core.Chat.send()">SEND</button>
-</div>
-</main>
+    <div class="main-area">
+        <aside class="panel todo-panel">
+            <div style="padding:15px; font-size:10px; color:var(--p); border-bottom:1px solid var(--border)">MISSION_OBJECTIVES</div>
+            <div class="input-box">
+                <input type="text" id="todo-in" placeholder="ADD TASK...">
+            </div>
+            <div id="todo-list"></div>
+        </aside>
+
+        <div class="chat-wrapper">
+            <main class="panel chat-panel">
+                <div style="padding:15px; font-size:10px; color:var(--p); border-bottom:1px solid var(--border)">COMMS_CHANNEL_SECURE</div>
+                <div id="chat-stream"></div>
+                <div class="input-box">
+                    <input type="text" id="chat-in" placeholder="TRANSMIT MESSAGE...">
+                    <button onclick="Core.Chat.send()">SEND</button>
+                </div>
+            </main>
+        </div>
+    </div>
 </div>
 
 <script>
 const Core = {
-sb: window.supabase.createClient(
-'https://ebjsxlympwocluxgmwcu.supabase.co',
-'sb_publishable_8HhPj3Y8g5V7Np8Vy5xbzQ_2B7LjTkj'
-),
-user:null,
+    sb: window.supabase.createClient('https://ebjsxlympwocluxgmwcu.supabase.co', 'sb_publishable_8HhPj3Y8g5V7Np8Vy5xbzQ_2B7LjTkj'),
+    user: null,
 
-init(){
-this.Canvas.init();
-this.AuthListener();
-this.UI();
-setInterval(()=>document.getElementById('clock').innerText=new Date().toLocaleTimeString(),1000);
-this.loop();
-},
+    init() {
+        this.Canvas.init();
+        this.AuthListener();
+        this.UI();
+        setInterval(() => document.getElementById('clock').innerText = new Date().toLocaleTimeString(), 1000);
+        this.loop();
+    },
 
-Auth:async(t)=>{
-const e=email.value,p=pass.value;
-const {error}=await Core.sb.auth.signInWithPassword({email:e,password:p});
-if(error)alert(error.message);
-},
+    Auth: async (t) => {
+        const e = document.getElementById('email').value, p = document.getElementById('pass').value;
+        if(!e || !p) return alert("Enter credentials");
+        const { error } = await (t === 'in' ? Core.sb.auth.signInWithPassword({email:e, password:p}) : Core.sb.auth.signUp({email:e, password:p}));
+        if(error) alert(error.message);
+    },
 
-AuthListener(){
-this.sb.auth.onAuthStateChange((_,s)=>{
-if(s){
-this.user=s.user;
-auth-gate.classList.add('hidden');
-this.Chat.load();
-this.Chat.subscribe();
-}
-});
-},
+    AuthListener() {
+        this.sb.auth.onAuthStateChange((_, s) => {
+            if(s) {
+                this.user = s.user;
+                document.getElementById('auth-gate').classList.add('hidden');
+                this.Chat.load();
+            }
+        });
+    },
 
-Chat:{
-async load(){
-const {data}=await Core.sb.from('comments').select('*').order('created_at',{ascending:true});
-if(data)data.forEach(m=>this.render(m));
-},
-
-subscribe(){
-Core.sb.channel('comments')
-.on('postgres_changes',{event:'INSERT',schema:'public',table:'comments'},
-payload=>{
-if(payload.new.nickname!==Core.user.email.split('@')[0]){
-this.notify(payload.new);
-}
-this.render(payload.new);
-})
-.subscribe();
-},
-
-notify(m){
-const n=document.createElement('div');
-n.style.position='fixed';
-n.style.bottom='20px';
-n.style.right='20px';
-n.style.padding='15px 20px';
-n.style.background='rgba(0,0,0,0.9)';
-n.style.border='1px solid #00f2ff';
-n.style.color='#00f2ff';
-n.style.fontFamily='Orbitron';
-n.textContent='NEW MESSAGE FROM '+m.nickname.toUpperCase();
-document.body.appendChild(n);
-setTimeout(()=>n.remove(),3000);
-},
-
-render(m){
-const s=document.getElementById('chat-stream');
-const d=document.createElement('div');
-const nick=document.createElement('div');
-nick.className='msg-nick';
-nick.textContent=(m.nickname||'PILOT').toUpperCase();
-const text=document.createElement('div');
-text.className='msg-text';
-text.textContent=m.message;
-d.appendChild(nick);
-d.appendChild(text);
-s.appendChild(d);
-s.scrollTop=s.scrollHeight;
-},
-
-async send(){
-const i=document.getElementById('chat-in');
-if(!i.value||!Core.user)return;
-if(i.value.length>300)return;
-const n=Core.user.email.split('@')[0];
-const v=i.value;
-i.value='';
-await Core.sb.from('comments').insert([{message:v,nickname:n}]);
-}
-},
-
-UI() {
-    const chatInput = document.getElementById('chat-in');
-
-    chatInput.onkeypress = (e) => {
-        if (e.key === 'Enter') {
-            Core.Chat.send();
+    Chat: {
+        async load() {
+            const { data } = await Core.sb.from('comments').select('*').order('created_at', {ascending: true});
+            if(data) data.forEach(m => this.render(m));
+        },
+        render(m) {
+            const s = document.getElementById('chat-stream');
+            const d = document.createElement('div');
+            d.innerHTML = `<div class="msg-nick">${(m.nickname||'PILOT').toUpperCase()}</div><div class="msg-text">${m.message}</div>`;
+            s.appendChild(d);
+            s.scrollTop = s.scrollHeight;
+        },
+        async send() {
+            const i = document.getElementById('chat-in');
+            if(!i.value || !Core.user) return;
+            const n = Core.user.email.split('@')[0], v = i.value; i.value = '';
+            this.render({nickname: n, message: v});
+            await Core.sb.from('comments').insert([{message: v, nickname: n}]);
         }
-    };
-}
+    },
 
-,Canvas:{
-init(){
-this.cvs=starfield;
-this.ctx=this.cvs.getContext('2d');
-this.resize();
-window.onresize=()=>this.resize();
-this.stars=Array.from({length:200},()=>({x:Math.random()*this.cvs.width,y:Math.random()*this.cvs.height,v:Math.random()*0.5}));
-this.astronauts=Array.from({length:4},()=>({
-x:Math.random()*this.cvs.width,
-y:Math.random()*this.cvs.height,
-speed:0.3+Math.random()*0.5,
-size:20+Math.random()*20
-}));
-},
+    UI() {
+        document.getElementById('todo-in').onkeypress = (e) => {
+            if(e.key === 'Enter' && e.target.value) {
+                const d = document.createElement('div');
+                d.className = 'task'; d.innerText = '> ' + e.target.value.toUpperCase();
+                d.onclick = () => d.remove();
+                document.getElementById('todo-list').prepend(d);
+                e.target.value = '';
+            }
+        };
+        document.getElementById('chat-in').onkeypress = (e) => {
+            if(e.key === 'Enter') Core.Chat.send();
+        };
+    },
 
-resize(){
-this.cvs.width=innerWidth;
-this.cvs.height=innerHeight;
-},
+    Canvas: {
+        init() {
+            this.cvs = document.getElementById('starfield');
+            this.ctx = this.cvs.getContext('2d');
+            this.res(); window.onresize = () => this.res();
+            this.stars = Array.from({length: 200}, () => ({x:Math.random()*this.cvs.width, y:Math.random()*this.cvs.height, s:Math.random()*2, v:Math.random()*0.5}));
+            this.rocks = Array.from({length: 15}, () => ({x:Math.random()*this.cvs.width, y:Math.random()*this.cvs.height, s:5+Math.random()*15, r:Math.random()*6, vs:Math.random()*0.02}));
+            this.ufo = {x: -100, y: 450, p: []};
+        },
+        res() { this.cvs.width = window.innerWidth; this.cvs.height = window.innerHeight; },
+        draw() {
+            const ctx = this.ctx, cvs = this.cvs;
+            ctx.fillStyle = '#01050a'; ctx.fillRect(0,0,cvs.width, cvs.height);
+            
+            // Stars
+            ctx.fillStyle = '#fff';
+            this.stars.forEach(s => {
+                s.x -= s.v; if(s.x < 0) s.x = cvs.width;
+                ctx.globalAlpha = Math.random(); ctx.beginPath(); ctx.arc(s.x, s.y, s.s/2, 0, 7); ctx.fill();
+            });
 
-draw(){
-const ctx=this.ctx,cvs=this.cvs;
-ctx.fillStyle='#01050a';
-ctx.fillRect(0,0,cvs.width,cvs.height);
+            // Asteroids
+            ctx.strokeStyle = 'rgba(0,242,255,0.4)';
+            this.rocks.forEach(r => {
+                r.x -= 0.5; r.r += r.vs; if(r.x < -50) r.x = cvs.width+50;
+                ctx.save(); ctx.translate(r.x, r.y); ctx.rotate(r.r);
+                ctx.beginPath(); for(let i=0; i<6; i++) ctx.lineTo(Math.cos(i*Math.PI/3)*r.s, Math.sin(i*Math.PI/3)*r.s);
+                ctx.closePath(); ctx.stroke(); ctx.restore();
+            });
 
-ctx.fillStyle='#fff';
-this.stars.forEach(s=>{
-s.x-=s.v;
-if(s.x<0)s.x=cvs.width;
-ctx.beginPath();
-ctx.arc(s.x,s.y,1,0,7);
-ctx.fill();
-});
+            // Planet
+            const px = cvs.width * 0.85, py = cvs.height * 0.3;
+            let g = ctx.createRadialGradient(px-30, py-30, 5, px, py, 110);
+            g.addColorStop(0, '#00f2ff'); g.addColorStop(1, '#01050a');
+            ctx.fillStyle = g; ctx.beginPath(); ctx.arc(px, py, 110, 0, 7); ctx.fill();
+            ctx.strokeStyle = 'rgba(0,242,255,0.1)'; ctx.beginPath(); ctx.ellipse(px, py, 200, 50, 0.4, 0, 7); ctx.stroke();
 
-this.astronauts.forEach(a=>{
-a.x-=a.speed;
-if(a.x<-50)a.x=cvs.width+50;
-ctx.save();
-ctx.translate(a.x,a.y);
-ctx.strokeStyle='#00f2ff';
-ctx.beginPath();
-ctx.arc(0,0,a.size/4,0,Math.PI*2);
-ctx.stroke();
-ctx.beginPath();
-ctx.arc(0,-a.size/3,a.size/5,0,Math.PI*2);
-ctx.stroke();
-ctx.restore();
-});
-}
-},
-
-loop(){Core.Canvas.draw();requestAnimationFrame(()=>Core.loop());}
+            // UFO
+            let u = this.ufo; u.x += 1.5; if(u.x > cvs.width+100) u.x = -100;
+            let uy = u.y + Math.sin(Date.now()/500)*40;
+            if(Date.now() % 5 === 0) u.p.push({x: u.x-40, y: uy, a: 1});
+            u.p.forEach((p, i) => {
+                p.x -= 1; p.a -= 0.02; ctx.fillStyle = `rgba(0,242,255,${p.a})`;
+                ctx.beginPath(); ctx.arc(p.x, p.y, 2, 0, 7); ctx.fill(); if(p.a<=0) u.p.splice(i, 1);
+            });
+            ctx.fillStyle = '#111'; ctx.beginPath(); ctx.ellipse(u.x, uy, 50, 14, 0, 0, 7); ctx.fill();
+            ctx.strokeStyle = '#0ff'; ctx.lineWidth = 2; ctx.stroke();
+        }
+    },
+    loop() { Core.Canvas.draw(); requestAnimationFrame(() => Core.loop()); }
 };
-
-window.onload=()=>Core.init();
+window.onload = () => Core.init();
 </script>
-
 </body>
 </html>
